<resources>
    <string name="app_name">Movies App Kotlin</string>

    <string name="list_fragment_title">Best Movies</string>

    <string name="api_key">24fcde1ac848caee603c0e9452ec10ec</string>

    <string name="movie_detail_title">Title</string>
    <string name="movie_detail_release_date">Release Date</string>
    <string name="movie_detail_overview">Overview</string>
    <string name="movie_detail_genre">Genres</string>
    <string name="movie_detail_budget">Budget</string>
    <string name="movie_detail_revenue">Revenue</string>
    <string name="movie_detail_avarage">Vote Avarage</string>
    <string name="more_info">more info</string>

    <string name="dialog_label">Lütfen Bekleyin</string>
    <string name="dialog_detail_label">Bilgiler Alınıyor...</string>

    <string name="poster_base_url">https://image.tmdb.org/t/p/w600_and_h900_bestv2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
