<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="10dp"
    app:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/rcList_item_Movie_Poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">


            <TextView
                android:id="@+id/rcList_item_Movie_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/movie_detail_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rcList_item_Movie_Release_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/movie_detail_release_date"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rcList_item_Movie_Overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/movie_detail_overview"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">


                <TextView
                    android:id="@+id/rcList_item_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/more_info"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/rcList_item_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_more_detail" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>