<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailFragment">

    <LinearLayout
        android:id="@+id/fragment_detail_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_layout_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/fragment_detail_imgPoster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher" />



                    <TextView
                        android:id="@+id/fragment_detail_movie_release_date_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Release Date"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/fragment_detail_movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_release_date"
                        android:layout_marginBottom="15dp"/>

                    <TextView
                        android:id="@+id/fragment_detail_movie_overview_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_overview"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/fragment_detail_movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_overview"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/textview_style_with_border"
                        android:padding="3dp"/>

                    <TextView
                        android:id="@+id/fragment_detail_movie_genres_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_genre"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp">

                        <LinearLayout
                            android:id="@+id/fragment_detail_horizontal_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="3dp">


                        </LinearLayout>
                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/fragment_detail_movie_budget_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_budget"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/fragment_detail_movie_budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_budget"
                        android:layout_marginBottom="15dp"
                        android:padding="3dp"/>


                    <TextView
                        android:id="@+id/fragment_detail_movie_revenue_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_revenue"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/fragment_detail_movie_revenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_revenue"
                        android:layout_marginBottom="15dp"
                        android:padding="3dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="right">

                        <Button
                            android:id="@+id/fragment_detail_movie_overrate_button"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:text="00"
                            android:clickable="false"
                            android:textColor="@color/white"
                            android:textSize="17dp"
                            android:background="@drawable/button_cycle_and_color_style"/>

                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>